--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.87.1",
     "@vercel/analytics": "^1.5.0",
+    "bcryptjs": "^3.0.3",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.10.1",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
   },
